src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TextUnderElement25.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<FrameworkElement xml:space="preserve" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
	  Hello world	
</FrameworkElement>
</Page>
